# swifty

./: .gcc-flags.json  .gitignore  BUILDME.md  CMakeLists.txt  README.md  TODO.md  run
demo/small_game_system/: common_includes.hpp  components.hpp  entities.hpp  game.hpp  game_context.hpp  main.cpp  managers.hpp  messages.hpp  notifications.hpp  object_container.hpp  object_properties.hpp  systems.hpp
old/tiled/: dynamic_tiled_object.cpp  dynamic_tiled_object.hpp  structure_layers.cpp  tileset.cpp  wall_tracer.cpp
res/: basic_level.json  basic_level.tmx  basic_tiles.tsx  cat.cfg  cat.tsx  cat_new.tsx  new_basic_level.tmx  sky_background.tsx  spider.cfg  spider.tsx
res/behaviors/: basic_model.xml
src/: assets.cpp  assets.hpp  c_animator.cpp  c_animator.hpp  c_base.cpp  c_base.hpp  c_rigid_body.cpp  c_rigid_body.hpp  c_sprite.cpp  c_sprite.hpp  camera.cpp  camera.hpp  common.hpp  components.cpp  components.hpp  data.hpp  game.cpp  game.hpp  game_manager.cpp  game_manager.hpp  game_object.cpp  game_object.hpp  logging.cpp  logging.hpp  main.cpp  rsrc_factory.cpp  rsrc_factory.hpp  rsrc_tiled.cpp  rsrc_tiled.hpp  s_game_object.cpp  s_game_object.hpp  sys_collision.cpp  sys_collision.hpp  sys_physics_2d.cpp  sys_physics_2d.hpp  typedef.hpp  typedefs.cpp  typedefs.hpp
src/ai/: ai_core.cpp  ai_core.hpp  ai_states.cpp  ai_states.hpp  design.md
src/components/: ai_behavior.cpp  ai_behavior.hpp  ai_controller.cpp  ai_controller.hpp  all.hpp  animator.cpp  animator.hpp  component_base.cpp  component_base.hpp  pathing_2D.cpp  pathing_2D.hpp  (+6 more)
tools/: cpp-file  gen-cpp
(+95 files in other folders)
